[package]
name = "example_token"
version = "0.0.4"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false
rust-version = "1.63"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = {path = "../../soroban-sdk"}
soroban-auth = {path = "../../soroban-auth"}
bytes-lit = "0.0.3"

[dev-dependencies]
soroban-sdk = {path = "../../soroban-sdk", features = ["testutils"]}
soroban-auth = {path = "../../soroban-auth", features = ["testutils"]}

[features]
testutils = ["soroban-sdk/testutils"]
